# dipterv

backend/: create_tables.py  generator.py  pyproject.toml  simulation.py
backend/app/: __init__.py  config.py  generator.py  models.py  run.py
backend/app/controllers/: burst_risk_controller.py  leak_risk_controller.py  simulation_controller.py  town_controller.py
backend/app/core/ai/: burst_data_generator.py  burst_training_data.csv  generate_burst_data.py  model_diagnostics.py  train_burst_model.py
backend/app/core/ai/burst/: burst_data_generator.py  burst_data_stats.py  burst_validation.py  generate_burst_data.py  model_diagnostics.py  train_burst_model.py
backend/app/core/ai/leak/: generate_leak_data.py  generate_leak_data_v2.py  leak_classifier.pkl  leak_data_stats.py  leak_distance_meta.pkl  leak_meta.pkl  leak_scaler.pkl  leak_v2_classifier.pkl  leak_v2_meta.pkl  leak_v2_scaler.pkl  leak_validation.py  train_leak_model.py  train_leak_model_v2.py  utils.py
backend/app/core/ai/leak/backup/: leak_scaler.pkl  leak_xgb_model.pkl
backend/app/core/generator/: buildings.py  city_generator.py  config.py  districts.py  roads.py  terrain.py
backend/app/core/simulation/: consumption_profiles.py  model_builder.py  results_parser.py  runner.py
backend/app/utils/: json_cleaner.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/public/data/: example-town.json
frontend/src/app/: layout.tsx  page.tsx
procedural_city_generator/: all_sensor_data_dyn.csv  city_data.json  external_grid_massflows_dyn.csv  junction_pressures_dyn.csv  nice_town_data.json  pipe_velocities_dyn.csv  requirements.txt  sink_consumption_dynamic.csv  sink_massflows_dyn.csv
procedural_city_generator/citygen/: city_data.json  generator.py  render6towns.py  renderer.py  renderer2.py
procedural_city_generator/pandapipes/: pandapipes_integration.py  pandapipes_time_series.py  time_series_with_consumptions.py  with_consumptions.py
(+28 files in other folders)
