[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    { name = "Smitksy", email = "s.nandor01@gmail.com" }
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "Flask>=2.2.5,<3.0.0",
    "numpy<2.0",
    "Shapely>=1.8.5.post1,<2.0",
    "scikit-learn>=1.2.2,<1.3.0",
    "matplotlib>=3.6.2,<4.0.0",
    "noise>=1.2.2,<2.0.0",
    "pandapipes>=0.11.0,<0.12.0",
    "pandas>=1.5,<2.0",
    "pandapower>=2.14.11,<2.15.0",
    "flask-swagger-ui (>=4.11.1,<5.0.0)",
    "flask-restx (>=1.3.0,<2.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
