[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    { name = "Smitksy", email = "s.nandor01@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "Flask>=2.2.5,<3.0.0",
    "numpy>=1.26.4,<2.0",         # last stable with wheels for 3.12
    "Shapely>=2.0,<3.0",           # 1.8.x too old for 3.12, use 2.x
    "scikit-learn>=1.4,<2.0",      # 1.2.x too old, 1.4.x has wheels for 3.12
    "matplotlib>=3.7,<4.0",        # 3.7+ works on 3.12
    "perlin-noise>=1.12,<2.0",     # replaces old 'noise' (pure Python)
    "pandapipes>=0.11.0,<0.12.0",
    "pandas>=2.2,<3.0",            # 2.2.x has wheels for 3.12
    "pandapower>=2.14.11,<2.15.0",
    "flask-swagger-ui>=4.11.1,<5.0.0",
    "flask-restx>=1.3.0,<2.0.0",
    "flask-sqlalchemy>=3.1.1,<4.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "flask-cors>=5.0.1,<6.0.0",
    "imbalanced-learn (>=0.14.0,<0.15.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false